--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,3 +1,45 @@
 html {
-background-color:black
+background-color:gray
+}
+
+h1 {
+color:white;
+font-family:lucida;
+font-size:32px
+}
+
+h2 {
+color:white;
+font-family:lucida;
+font-size:20px
+}
+
+h3 {
+color:white;
+font-family:lucida;
+font-size:18px
+}
+
+p {
+color:white;
+font-family:lucida;
+font-size:16px
+}
+
+li {
+color:white;
+font-family:lucida;
+font-size:16px
+}
+
+center {
+color:white;
+font-family:lucida;
+font-size:16px
+}
+
+sup {
+color:white;
+font-family:lucida;
+font-size:8px
 }
